Auto commit on 2025-07-19 21:12:14